hphp/test/slow/typed_locals/enforce_assign.php.expectf
Fatal error: Uncaught exception 'TypeAssertionException' with message 'Expected string, got int' in %s/hphp/test/slow/typed_locals/enforce_assign.php:7
Stack trace:
#0 {main}
